oxiplate-derive/tests/broken/derive/inline-attribute-typo.stderr
error: Expected an attribute named `oxiplate_inline` or `oxiplate` to specify the template:
       External: #[oxiplate = "path/to/template/from/templates/directory.html.oxip"]
       Internal: #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/inline-attribute-typo.rs:5:8
  |
5 | struct Data;
  |        ^^^^

error: cannot find attribute `oxiplate_inlinee` in this scope
 --> tests/broken/derive/inline-attribute-typo.rs:4:3
  |
4 | #[oxiplate_inlinee("")]
  |   ^^^^^^^^^^^^^^^^ help: a derive helper attribute with a similar name exists: `oxiplate_inline`
