oxiplate-derive/tests/broken/derive/inline-attribute-typo.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inlinee("")]
struct Data;

fn main() {}
